--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,7 @@
             android:title="@string/menu_nav_3" />
         <item
             android:id="@+id/nav_slideshow"
+            android:icon="@drawable/ic_baseline_contact"
             android:title="@string/menu_nav_4" />
     </group>
 </menu>
