--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,12 +13,16 @@
             android:icon="@drawable/ic_baseline_account_box"
             android:title="@string/menu_nav_2" />
         <item
-            android:id="@+id/nav_report"
-            android:icon="@drawable/ic_baseline_report"
+            android:id="@+id/nav_inspection"
+            android:icon="@drawable/ic_baseline_assignment"
             android:title="@string/menu_nav_3" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_baseline_contact"
+            android:id="@+id/nav_report"
+            android:icon="@drawable/ic_baseline_report"
             android:title="@string/menu_nav_4" />
+        <item
+            android:id="@+id/nav_contactus"
+            android:icon="@drawable/ic_baseline_contact"
+            android:title="@string/menu_nav_5" />
     </group>
 </menu>
