--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,14 +18,20 @@
         tools:layout="@layout/fragment_profile" />
 
     <fragment
+        android:id="@+id/nav_inspection"
+        android:name="com.navigatorsguide.app.ui.inspection.InspectionFragment"
+        android:label="@string/menu_nav_3"
+        tools:layout="@layout/fragment_inspection" />
+
+    <fragment
         android:id="@+id/nav_report"
         android:name="com.navigatorsguide.app.ui.report.ReportBuilderFragment"
-        android:label="@string/menu_nav_3"
+        android:label="@string/menu_nav_4"
         tools:layout="@layout/fragment_report_builder" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_contactus"
         android:name="com.navigatorsguide.app.ui.contact.ContactUsFragment"
-        android:label="@string/menu_nav_4"
+        android:label="@string/menu_nav_5"
         tools:layout="@layout/fragment_contactus" />
 </navigation>
