Guide2Inspection stable version having all changes till 09/21.

--- a/app/src/main/res/drawable-v21/button_background.xml
+++ b/app/src/main/res/drawable-v21/button_background.xml
@@ -9,6 +9,13 @@
                     <solid android:color="@color/colorAccent" />
                 </shape>
             </item>
+
+            <item android:state_enabled="false">
+                <shape>
+                    <corners android:radius="@dimen/dimen_25" />
+                    <solid android:color="@color/colorDisabledButton" />
+                </shape>
+            </item>
         </selector>
     </item>
 
