--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -7,4 +7,11 @@
             <corners android:radius="@dimen/dimen_25" />
         </shape>
     </item>
+
+    <item android:state_enabled="false">
+        <shape>
+            <solid android:color="@color/colorDisabledButton" />
+            <corners android:radius="@dimen/dimen_25" />
+        </shape>
+    </item>
 </selector>
