--- a/app/src/main/res/layout/note_sheet_layout.xml
+++ b/app/src/main/res/layout/note_sheet_layout.xml
@@ -1,38 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_15"
-        android:text="@string/txt_attention"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorBlack"
-        android:textSize="@dimen/text_20" />
-
-    <TextView
-        android:id="@+id/note_text_view"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/dimen_10"
-        android:textColor="@color/colorBlack"
-        android:textSize="@dimen/text_16" />
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/continue_button"
-        style="@style/ButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_height"
-        android:layout_below="@id/password_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="@dimen/activity_vertical_margin"
-        android:text="Continue"
-        android:textSize="@dimen/text_14" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dimen_15"
+            android:text="@string/txt_attention"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/text_20" />
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+        <TextView
+            android:id="@+id/note_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/dimen_10"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:textColor="@color/colorBlack"
+            android:textSize="@dimen/text_16" />
+
+        <Button
+            android:id="@+id/continue_button"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/button_height"
+            android:layout_below="@id/password_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="@dimen/activity_vertical_margin"
+            android:text="Continue"
+            android:textSize="@dimen/text_14" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</ScrollView>
